<resources>
    <string name="app_name">SE Recipes</string>
    <!-- Strings used for fragments for navigation -->
    <string name="recipes">Recipes</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="logo">Logo</string>
    <string name="back">Back</string>
    <string name="resource_cost">Resource cost</string>
    <string name="material">Material</string>
    <string name="_10x">10x</string>
    <string name="_1x">1x</string>
    <string name="_100x">100x</string>
    <string name="_1000x">1000x</string>
    <string name="quantity">Quantity</string>
    <string name="red_button_mode">Red Button mode</string>
    <string name="about_text">This scuffed application is a recipe book for the video game
        Space Engineers, developed by Keen Software House and is made
        with the purpose of learning. -V.B.</string>
    <string name="recipe_book">Recipe Book</string>
    <string name="space_engineers">Space Engineers</string>
</resources>